plugins {
    id 'java-library'
}

dependencies {
    implementation(
        'org.glassfish.jersey.ext:jersey-proxy-client:3.1.5',
        'javax.xml.bind:jaxb-api:2.3.1',
        'org.glassfish.jaxb:jaxb-runtime:4.0.4',
        'javax.activation:activation:1.1.1',
        'jakarta.servlet:jakarta.servlet-api:6.0.0',
        'org.slf4j:jul-to-slf4j:2.0.12',
        'org.glassfish.grizzly:grizzly-http-servlet:4.0.2',
        project(":common"),
    )

    commonTestDeps(testFixtures(project(":common")))
    commonTestDeps(project(":logging"))

    api(
        'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.5',
        'org.glassfish.jersey.media:jersey-media-multipart:3.1.5',
        'org.glassfish.jersey.inject:jersey-hk2:3.1.5',
        'org.glassfish.jersey.containers:jersey-container-grizzly2-http:3.1.5',
        'org.glassfish.grizzly:grizzly-websockets:4.0.2',
        'org.glassfish.grizzly:grizzly-http-client:1.16',
    )
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
